harness/test/errors/081_array_shape_mismatch.eu
# Shape does not match data length
a: arr.from-flat([2, 2], [1, 2, 3])
